tests/parser/errors/missing_block.mochi
fun broken(a: int): int
